AdventOfCode 2023 Day5 part2