@@ -1,7 +1,10 @@
 package com.hodvidar.adventofcode.y2023;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+
+import static java.util.stream.Collectors.toList;
 
 public class _Day05_2 extends _Day05 {
 
@@ -33,74 +36,96 @@ public class _Day05_2 extends _Day05 {
 
         @Override
         public double getLowestLastCategoryValueFromSeeds() {
-            List<Range> previousRange = seedRanges;
+            List<Range> ranges = seedRanges;
             for (final List<MappingRange> mappingRanges : mappingRangesCategories) {
-                previousRange = mapRangesToNewRanges(previousRange, mappingRanges);
+                ranges = mapRangesToNewRanges(ranges, mappingRanges);
             }
-            return previousRange.stream().mapToDouble(r -> r.min).min().orElseThrow();
+            return ranges.stream().mapToDouble(r -> r.min).min().orElseThrow();
         }
 
-        private List<Range> mapRangesToNewRanges(final List<Range> ranges, List<MappingRange> mappingRanges) {
+        private List<Range> mapRangesToNewRanges(final List<Range> ranges, final List<MappingRange> mappingRanges) {
             final List<Range> newRanges = new ArrayList<>();
             for (final Range range : ranges) {
                 List<MappingRange> relevantMappingRanges = mappingRanges.stream()
                         .filter(mr -> mr.isInRange(range.min) || mr.isInRange(range.max))
-                        .toList();
+                        .collect(toList());
                 if (relevantMappingRanges.isEmpty()) {
                     newRanges.add(range);
                 } else {
-                    relevantMappingRanges.forEach(mr -> newRanges.addAll(mapRangeToNewRanges(range, mr)));
+                    newRanges.addAll(mapRangeToNewRanges(range, relevantMappingRanges));
                 }
             }
             return newRanges;
         }
 
+
+        private List<Range> mapRangeToNewRanges(final Range range, List<MappingRange> relevantMappingRanges) {
+            relevantMappingRanges.sort(Comparator.comparingDouble(MappingRange::min));
+            // Need to handle this case
+            // mappingRange is fully inside range
+            //                    [<-------MAP1------->]              [<-------MAP2------->]
+            //       [<------------VALUES--------------------------------------------------------------->]
+            // -->   [<--VALUES->][<----NEWVAL1------->][<--VALUES-->][<----NEWVAL2------->][<--VALUES-->]
+            final List<Range> newRanges = new ArrayList<>();
+            Range currentRange = range;
+            // As relevantMappingRanges are sorted, we can iterate over them and apply transformation one by one
+            // Step1:
+            //                    [<-------MAP1------->]
+            //       [<------------VALUES--------------------------------------------------------------->]
+            // -->   [<--VALUES->][<----NEWVAL1------->][<--VALUES-------------------------------------->]
+            // Step2:
+            //                                                          [<-------MAP2------->]
+            //                                          [<------------VALUES---------------------------->]
+            // -->                                      [<--VALUES-->][<----NEWVAL2------->][<--VALUES-->]
+            for(int i = 0; i < relevantMappingRanges.size(); i++) {
+                final List<Range> intermediateRanges = mapRangeToNewRanges(currentRange, relevantMappingRanges.get(i));
+                currentRange = intermediateRanges.get(intermediateRanges.size() - 1);
+                newRanges.addAll(intermediateRanges.subList(0, intermediateRanges.size() - 1));
+                if(i == relevantMappingRanges.size() - 1) {
+                    newRanges.add(currentRange);
+                }
+            }
+            return newRanges;
+        }
         private List<Range> mapRangeToNewRanges(final Range range, MappingRange mappingRange) {
             final List<Range> newRanges = new ArrayList<>();
-            if (mappingRange.min <= range.min && mappingRange.max >= range.max) {
+            if (mappingRange.min() <= range.min() && mappingRange.max() >= range.max()) {
                 // range is fully inside mappingRange
                 // [<-------MAP------->]
                 //   [<--VALUES-->]
                 // -->                [<--NEWVAL-->]
-                newRanges.add(new Range(mappingRange.transform(range.min), mappingRange.transform(range.max)));
+                newRanges.add(new Range(mappingRange.transform(range.min()), mappingRange.transform(range.max())));
                 return newRanges;
             }
-            if (mappingRange.min > range.min && mappingRange.max < range.max) {
+            if (mappingRange.min() > range.min() && mappingRange.max() < range.max()) {
                 // mappingRange is fully inside range
                 //              [<-------MAP------->]
                 //       [<------------VALUES-------------->]
                 // -->   [<--VALUES-->] [<--NEWVAL-->] [<--VALUES-->]
-                newRanges.add(new Range(range.min, mappingRange.min - 1));
-                newRanges.add(new Range(mappingRange.transform(mappingRange.min), mappingRange.transform(mappingRange.max)));
-                newRanges.add(new Range(mappingRange.max + 1, range.max));
+                newRanges.add(new Range(range.min(), mappingRange.min() - 1));
+                newRanges.add(new Range(mappingRange.transform(mappingRange.min()), mappingRange.transform(mappingRange.max())));
+                newRanges.add(new Range(mappingRange.max() + 1, range.max()));
                 return newRanges;
             }
-            if (mappingRange.min <= range.min) {
+            if (mappingRange.min() <= range.min()) {
                 // mappingRange is partially inside range, on the left
                 //   [<-------MAP------->]
                 //       [<------------VALUES-------------->]
                 // -->   [<--NEWVAL----->] [<--VALUES-->]
-                newRanges.add(new Range(mappingRange.transform(range.min), mappingRange.transform(mappingRange.max)));
-                newRanges.add(new Range(mappingRange.max + 1, range.max));
+                newRanges.add(new Range(mappingRange.transform(range.min()), mappingRange.transform(mappingRange.max())));
+                newRanges.add(new Range(mappingRange.max() + 1, range.max()));
                 return newRanges;
             }
             // mappingRange is partially inside range, on the right
             //                           [<-------MAP------->]
             //       [<------------VALUES-------------->]
             // -->   [<--VALUES------->] [<--NEWVAL----->]
-            newRanges.add(new Range(range.min, mappingRange.min - 1));
-            newRanges.add(new Range(mappingRange.transform(mappingRange.min), mappingRange.transform(range.max)));
+            newRanges.add(new Range(range.min(), mappingRange.min() - 1));
+            newRanges.add(new Range(mappingRange.transform(mappingRange.min()), mappingRange.transform(range.max())));
             return newRanges;
         }
     }
 
-    private static class Range {
-        protected final double min;
-        protected final double max;
-
-        public Range(final double min, final double max) {
-            this.min = min;
-            this.max = max;
-        }
+    private record Range(double min, double max) {
     }
 }
